Modify polygon shortcuts and move all shortcuts to rendered_data_panel.ts

--- a/src/ui/annotations.css
+++ b/src/ui/annotations.css
@@ -250,6 +250,10 @@ div.neuroglancer-annotation-details-description {
   flex-direction: row;
   font-family: sans-serif;
   font-size: small;
+  /* BRAINSHARE STARTS */
+  margin: 2px 0px 2px 0px;
+  justify-content: space-between;
+  /* BRIANSHARE ENDS */
 }
 
 .neuroglancer-annotation-property-label {
@@ -281,3 +285,20 @@ input.neuroglancer-segment-list-entry-id {
   font-family: sans-serif;
   font-size: small;
 }
+
+/* BRAINSHARE STARTS */
+.neuroglancer-annotation-property-color-input {
+  width: 50px;
+  height: 100%;
+  border: 0px;
+}
+
+.neuroglancer-annotation-property-value-input {
+  width: 50px;
+  height: 100%;
+  border: 0px;
+  padding: 0px;
+  background-color: rgba(255, 255, 255, 0.3);
+  color: #fff;
+}
+/* BRAINSHARE ENDS */
