--- a/src/brainshare/state_tab.css
+++ b/src/brainshare/state_tab.css
@@ -3,17 +3,38 @@
   flex-direction: column;
 }
 
+.neuroglancer-state-tab-titlebar {
+  background-color: #222;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.neuroglancer-state-tab-title {
+  font-family: sans-serif;
+  font-size: 10pt;
+}
+
 .neuroglancer-state-tab-comment {
-  background-color: #151515;
+  align-self: stretch;
+  background-color: #222;
   color: white;
-  font-family: monospace;
-  font-size: medium;
-  border: 2px solid #333;
-  padding: 2px;
+  font: 10pt sans-serif;
+  border: 0px;
   outline: 0px;
+  resize: none;
+  overflow-y: scroll;
 }
 
 .neuroglancer-state-tab-button-container {
   display: flex;
   flex-direction: row;
+}
+
+.neuroglancer-state-tab-state-row {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  font-family: sans-serif;
+  font-size: small;
 }
