--- a/src/ui/annotations.css
+++ b/src/ui/annotations.css
@@ -251,6 +251,10 @@ div.neuroglancer-annotation-details-description {
   font-family: sans-serif;
   font-size: small;
   user-select: text;
+  /* BRAINSHARE STARTS */
+  margin: 2px 0px 2px 0px;
+  justify-content: space-between;
+  /* BRIANSHARE ENDS */
 }
 
 .neuroglancer-annotation-property-label {
