--- a/src/ui/annotations.css
+++ b/src/ui/annotations.css
@@ -251,6 +251,11 @@ div.neuroglancer-annotation-details-description {
   font-family: sans-serif;
   font-size: small;
   user-select: text;
+  /* BRAINSHARE STARTS */
+  margin: 2px 0px 2px 0px;
+  justify-content: space-between;
+  /* BRIANSHARE ENDS */
+
 }
 
 .neuroglancer-annotation-property-label {
@@ -282,3 +287,25 @@ input.neuroglancer-segment-list-entry-id {
   font-family: sans-serif;
   font-size: small;
 }
+/* BRAINSHARE STARTS */
+.neuroglancer-annotation-property-color-input {
+  width: 50px;
+  height: 100%;
+  border: 0px;
+}
+
+.neuroglancer-annotation-property-value-input {
+  width: 50px;
+  height: 100%;
+  border: 0px;
+  padding: 0px;
+  background-color: rgba(255, 255, 255, 0.3);
+  color: #fff;
+}
+
+.neuroglancer-annotation-session-id {
+  font: 10pt sans-serif;
+  display: flex;
+  justify-content: space-between;
+}
+/* BRAINSHARE ENDS */
